Follow mr. @Rollczi review. v2